--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.14.4
   permission_handler: ^12.0.1
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
