[add]権限リクエスト機能の実装

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Bluetoothを使用します</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>位置情報を使用します</string>
+	<key>NSUserNotificationUsageDescription</key>
+	<string>通知を送信します</string>
 </dict>
 </plist>
