--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   permission_handler: ^12.0.1
   url_launcher: ^6.3.2
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
