--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <!-- Android9(APIレベル28)以下 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
-        android:label="meshtalk"
+        android:label="ANSLIN"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
