--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: meshtalk
-description: "A new Flutter project."
+name: anslin
+description: "避難所アプリ"
 publish_to: "none"
 version: 0.1.0
 
@@ -23,3 +23,9 @@ flutter:
   assets:
     - assets/img/
   uses-material-design: true
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  image_path: assets/img/app_icon.png
