--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "meshtalk" "\0"
+            VALUE "FileDescription", "anslin" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "meshtalk" "\0"
+            VALUE "InternalName", "anslin" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "meshtalk.exe" "\0"
-            VALUE "ProductName", "meshtalk" "\0"
+            VALUE "OriginalFilename", "anslin.exe" "\0"
+            VALUE "ProductName", "anslin" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
