--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   permission_handler: ^12.0.1
   url_launcher: ^6.3.2
   sqflite: ^2.4.2
+  badges: ^3.1.2 
 
 dev_dependencies:
   flutter_test:
