--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   sqflite: ^2.4.2
   badges: ^3.1.2 
   intl: ^0.18.1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
