--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   badges: ^3.1.2 
   intl: ^0.18.1
   shared_preferences: ^2.2.3
+  geolocator: ^12.0.0
+  latlong2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
