--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   url_launcher: ^6.3.2
   sqflite: ^2.4.2
   shared_preferences: ^2.2.3
+  badges: ^3.1.2 
+  intl: ^0.18.1
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
