--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   badges: ^3.1.2 
   intl: ^0.18.1
   path: ^1.8.3
+  geolocator: ^12.0.0
+  latlong2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
